[APPBUG-1839] explanatory information spacing fix
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@25978 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/pdp/accordion.css
+++ b/projects/Media/docroot/assets/css/pdp/accordion.css
@@ -177,3 +177,7 @@
 
 .pdp-accordion-webratingscale-item {
 }
+
+.pdp-accordion-explanatory .qualityRating{
+  margin-top:3px;
+}
